# fcmp-rs

./: .gitignore  Cargo.toml  license-apache.md  readme.md
fcmp-cli/: Cargo.toml
fcmp-cli/src/: command.rs  lib.rs
fcmp-core/: Cargo.toml
src/: command.rs  compare.rs  lib.rs  ops.rs
