[package]
name = "fcmp"
version = "0.2.1"
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
edition = "2021"
license = "MIT or Apache-2.0"
repository = "https://github.com/solarretrace/fcmp-rs"
homepage = "https://github.com/solarretrace/fcmp-rs"
description = "File compare utility"
readme = "readme.md"
keywords = ["file", "compare", "utility", "cli", "cmp", "diff"]
categories = []
documentation = ""
exclude = [
    "*.sublime-project",
    "*.sublime-workspace"
]

[lib]
name = "fcmp"

[features]
default = []

[dependencies]
# Required dependencies
anyhow = "1.0.53"
clap = { version = "3.1.0", features = ["derive", "suggestions", "color"] }
colored = { version = "2.0.0" }


# Dependencies used for tests, examples, and benches.
[dev-dependencies]
pretty_assertions = "1.1.0"

[badges]
maintenance = { status = "experimental" }


# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0
debug = false # Disabled to speed up compilation; not being used much.
rpath = false
lto = false
debug-assertions = true
incremental = true
overflow-checks = true

# Development profile overrides, ensure dependent crates run fast.
[profile.dev.package."*"]
opt-level = 3
debug-assertions = false
codegen-units = 1


# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = true
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true


